Fix non-rendering svg icons on Safari ios

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -351,6 +351,12 @@ h1, h2, h3, h4, h5 {
   width: 80px;
 }
 
+.icon-safari-fix {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .icon-invert {
   filter: invert(0);
 }
